test/files/neg/t6264.check
t6264.scala:5: warning: non-variable type argument Tuple1[_] in type Tuple2[_, Tuple1[_]] is unchecked since it is eliminated by erasure
    x.isInstanceOf[Tuple2[_, Tuple1[_]]]
                  ^
1 warning
error: No warnings can be incurred under -Werror.
